--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
+    <!-- Este link es incorrecto, deberia ser como se muestra en la linea 9
+    <link rel="stylesheet" href="assets/styles.css"> -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>APIs</title>
 </head>
 <body>
     <p class="name"></p>
     <p class="blog"></p>
+    <p class="location"></p> <!-- Se tuvo que agregar el parrafo de location ya que no existia en el html y habia conflicto con el js -->
 
   <script src="../assets/js/app.js"></script>
 </body>
